# aip-proxy

./: .gitignore  README.md  aip-proxy-0.1.0.vsix  guide.html  pyproject.toml
src/aip_proxy/: __init__.py  cache.py  cli.py  compressor.py  server.py  stats.py
tests/: test_cache.py  test_compressor.py
